--- a/webgui/style.css
+++ b/webgui/style.css
@@ -23,30 +23,28 @@ body {
   background-color: #333333;
 }
 
-.widget {
-  margin:4px;
-  font-family: monospace;
-  background-color: #1D1D1D;
-  color: #FFFFFF;
-  font-size: 10pt;
-  padding: 2px;
-  overflow: auto;
-}
-
-
 
 input[type=select]{
   width:42px;
   float:right;
 }
 
+input[type=number]{
+  width:42px;
+  float:right;
+}
+
+input[type=button]{
+  width:42px;
+  float:right;
+}
+
+
 /*input[type=range] {
   position: absolute;
   top: 40%;
   transform: rotate(270deg);
 }*/
-
-
 .selecta {
   width:50%;
   float:right;
@@ -67,6 +65,11 @@ input[type=select]{
   width:80%;
 }
 
+#reload {
+  position:absolute;
+  right:10pt;
+  top:10pt;
+}
 
 .bottompart {
   margin: 10px;
