--- a/webgui/style.css
+++ b/webgui/style.css
@@ -10,7 +10,7 @@ input {
 }
 
 input[type=color] {
-  width: 42px;
+  width: 64px;
   margin:0;
 }
 
@@ -22,7 +22,6 @@ input[type=radio] {
 input[type=range] {
   height: 2px;
 }
-
 
 .wrapper {
   position: absolute;
@@ -51,6 +50,7 @@ input[type=range] {
   width:128px;
   margin-left: auto;
   background-color:#0E0E0E;
+  color: #98A7FF;
 }
 .shaderSlider {
   width:80%;
@@ -79,6 +79,21 @@ input[type=range] {
   right:10pt;
   top:10pt;
 }
+
+#configPopup {
+  z-index: 999;
+  border: 4px solid white;
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  display: none;
+}
+
 
 .tpCell {
   border: 1px solid grey;
