--- a/freeliner_sketch/data/webgui/style.css
+++ b/freeliner_sketch/data/webgui/style.css
@@ -52,6 +52,10 @@ input[type=checkbox] {
   overflow: auto;
 }
 
+.widget:hover {
+  background-color: #333333;
+}
+
 .layerwidget {
   margin: 4px;
   min-height: 24px;
@@ -66,7 +70,7 @@ input[type=checkbox] {
   overflow: auto;
 }
 
-.widget:hover {
+.layerwidget:hover {
   background-color: #333333;
 }
 
@@ -119,9 +123,10 @@ input[type=checkbox] {
 }
 
 #layerStack {
-  border: 2px solid white;
-}
+  /*border: 2px solid grey;*/
+  background-color: red;
 
+}
 
 .tpCell {
   border: 1px solid grey;
