--- a/freeliner_sketch/data/webgui/style.css
+++ b/freeliner_sketch/data/webgui/style.css
@@ -142,17 +142,27 @@ input[type=checkbox] {
 }
 
 #configPopup {
-  z-index: 999;
-  border: 4px solid white;
-  position: absolute;
-  width: 300px;
-  height: 200px;
-  top:0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  display: none;
+    margin: 4px;
+    min-height: 24px;
+    background-color: #5D5D5D;
+    color: #FFFFFF;
+    font-size: 10pt;
+    padding: 2px;
+    padding-left: 4px;
+    display: flex;
+    align-items: center;
+    overflow: auto;
+    z-index: 999;
+    border: 4px solid #B5B5B5;
+    position: absolute;
+    width: 400px;
+    height: 210px;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: none;
 }
 
 #layerStack {
